--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -2,6 +2,7 @@
 //@import './mixin.less';
 @import './transition.less';
 @import './sidebar.less';
+@import "./antv.less";
 
 body {
   height: 100%;
@@ -135,33 +136,4 @@ div:focus {
   &.deleted {
     background: #d0d0d0;
   }
-}
-
-.link-type,
-.link-type:focus {
-  color: #337ab7;
-  cursor: pointer;
-
-  &:hover {
-    color: rgb(32, 160, 255);
-  }
-}
-
-.filter-container {
-  padding-bottom: 10px;
-
-  .filter-item {
-    display: inline-block;
-    vertical-align: middle;
-    margin-bottom: 10px;
-  }
-}
-
-//refine vue-multiselect plugin
-.multiselect {
-  line-height: 16px;
-}
-
-.multiselect--active {
-  z-index: 1000 !important;
 }
